1. scss 테스트 2. db 연결 데이터 없을 시 default 문구 추가

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="icon" href="data:," />
+    <!-- <link rel="icon" type="image/svg+xml" sizes="16x16" href="path/to/favicon.svg"> -->
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
+    <title>Seoan's page</title>
   </head>
   <body>
     <div id="root"></div>
